# num_opt_hw

./: .gitignore  CMakeLists.txt  README.md  README_HW5.md
.github/workflows/: main.yml
config/: curve_gen.yaml
include/gcopter/: cubic_spline.hpp  lbfgs.hpp  path_smoother.hpp
include/misc/: backward.hpp  matplotlibcpp.h  visualizer.hpp
src/: curve_gen.cpp
